# 8D-Audio-Generator

./: README.md
backend/: .gitignore  pyproject.toml  run.py  test_main.py
backend/app/: config.py  logger.py  main.py  utils.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: AudioUpload.test.tsx  AudioUpload.tsx  DownloadModal.tsx  LoadingAnimation.tsx  NavBar.tsx
frontend/src/app/styles/: Home.module.css
frontend/src/app/utils/: api.ts
