[tool.poetry]
name = "8dmusic"
version = "0.1.0"
description = "A web application to convert normal music to give the effect of \"8D music\""
authors = ["Naschwin Domnic Dias <naschwindias@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi-cors = "^0.0.6"
tqdm = "^4.66.5"
python-multipart = "^0.0.9"
pydantic-settings = "^2.4.0"
librosa = "^0.10.2.post1"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
numpy = "^1.22.4"
moviepy = "^1.0.3"
pydub = "^0.25.1"
scipy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
